Updated our teams section

--- a/index.html
+++ b/index.html
@@ -184,104 +184,116 @@
         <div class="container">
             <h1 class="display-4 jumbotron-title" style="color: #2F4785;">Our Team</h1>
             <hr>
-            <h3 class="display-4 jumbotron-subtitle">Doctors</h3>
-            <div class="card-group doctor-cards">
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+            <div class="row">
+                <div class="col-md-auto">
+                    <h3 class="display-4 jumbotron-subtitle">Doctors</h3>
+                    <div class="card-group doctor-cards">
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                <div class="col-md-auto">
+                    <h3 class="display-4 jumbotron-subtitle">Pharmacists</h3>
+                    <div class="card-group doctor-cards">
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h3 class="display-4 jumbotron-subtitle">Pharmacists</h3>
-            <div class="card-group doctor-cards">
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h3 class="display-4 jumbotron-subtitle">Nurses</h3>
-            <div class="card-group doctor-cards">
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <h3 class="display-4 jumbotron-subtitle">Admins</h3>
-            <div class="card-group doctor-cards">
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+            <div class="row">
+                <div class="col-md-auto">
+                    <h3 class="display-4 jumbotron-subtitle">Nurses</h3>
+                    <div class="card-group doctor-cards">
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col doctor-card">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                <div class="col-md-auto">
+                    <h3 class="display-4 jumbotron-subtitle">Admins</h3>
+                    <div class="card-group doctor-cards">
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="doctors-col doctor-card">
+                            <div class="card  shadow p-3 mb-5 bg-white rounded rounded">
+                                <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Full Name</h5>
+                                    <p class="card-text"><small class="text-muted">Job Name</small></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -328,8 +340,9 @@
                 <div class="col-md">
                     <h5>Location</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#"> 4th Floor, 18 Thawra St.,<br>QNB Building, Helopolis,<br>Cairo,
-                        Egypt</a></li>
+                        <li><a class="text-muted" href="#"> 4th Floor, 18 Thawra St.,<br>QNB Building,
+                                Helopolis,<br>Cairo,
+                                Egypt</a></li>
                     </ul>
                 </div>
                 <div class="col-md">
