--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <br><i class="fas fa-envelope"></i></i><strong>
                                 egybrit@egybrit.net</strong>
 
-                            <br><br><i class="fas fa-first-aid"></i><strong> Emergency Hotline:<br>(+2)
+                            <br><br><i class="fas fa-first-aid"></i><strong> Emergency Hotline<br>(+2)
                                 01099333370</strong>
                         </p>
                     </div>
@@ -320,7 +320,7 @@
             <div class="row">
                 <div class="col-md footer-content">
                     <img src="assets/images/logo.png" class="footer-image"><br>
-                    <small class="d-block mb-3 text-muted" style="padding-top: 1%;">.</small>
+                    <small class="d-block mb-3 text-muted" style="padding-top: 1%;"></small>
                 </div>
                 <div class="col-md">
                     <h5>Contact</h5>
